--- a/IMDBmovies.ipynb
+++ b/IMDBmovies.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## รายชื่อกลุ่ม ##\n",
+    "\n",
+    "- นายกลวัชร เสถียรเสรีสุข  6210450016\n",
+    "- นายเกียรติกุล ทองอุดม    6210450032\n",
+    "- นานชาญวิทย์ สายสิญจน์  6210450521\n",
+    "- น.ส.ณัฎฐกานต์ อรสุนทร   6210451144\n",
+    "- น.ส.ธันวพร ธรรมเจริญพงศ์ 6210451225"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -452,6 +467,43 @@
    "source": [
     "c = pd.read_csv(\"./IMDb movies.csv\")\n",
     "c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## รายละเอียดข้อมูล ##\n",
+    "\n",
+    "**แหล่งที่มาของข้อมูล**\n",
+    "- https://www.kaggle.com/stefanoleone992/imdb-extensive-dataset\n",
+    "\n",
+    "**เก็บรวบรวมโดย**\n",
+    "- Stefano Leone\n",
+    "\n",
+    "**รายละเอียดคอลัมน์**\n",
+    "1. imbd_title_id    - รหัสของหนังแต่ละเรื่อง\n",
+    "2. title                 - ชื่อเรื่อง\n",
+    "3. original_title     - ชื่อเรื่องจากต้นฉบับ\n",
+    "4. year                - ปีที่กำหนดฉาย\n",
+    "5. date_published - วันที่กำหนดฉาย\n",
+    "6. genre              - ประเภทของหนัง\n",
+    "7. duration          - ระยะเวลาของหนัง(ต้นเรื่อง - จบเรื่อง)\n",
+    "8. country           - ประเทศที่ผลิต\n",
+    "9. language         - ภาษาของหนัง\n",
+    "10. director         - ผู้กำกับการแสดง\n",
+    "11. writer            - ผู้เขียน\n",
+    "12. production_company - บริษัทที่สร้างหนัง\n",
+    "13. actor             - นักแสดง\n",
+    "14. description     - คำอธิบายหนัง, เกริ่นเนื้อเรื่องย่อ\n",
+    "15. avg_vote       - ค่าเฉลี่ยคะแนนโหวต\n",
+    "16. votes             - จำนวนที่โหวตทั้งหมด\n",
+    "17. budget           - งบประมาณการสร้าง\n",
+    "18. usa_gross_income - รายได้รวมจากการฉายหนัง\n",
+    "19. worlwide_gross_income - รายได้รวมทั่วโลกจากการฉายหนัง\n",
+    "20. metascore       - คะแนนจากการวิจารณ์ของสื่อต่างๆ\n",
+    "21. reviews_from_users - การรีวิวจากผู้ชม\n",
+    "22. reviews_from_critics - การรีวิลจากนักวิจารณ์"
    ]
   },
   {
