--- a/IMDBmovies.ipynb
+++ b/IMDBmovies.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import datetime as dt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,8 +27,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "c = pd.read_csv(\"../IMDb movies/IMDb movies.csv\")"
+    "im= pd.read_csv(\"../IMDb movies/IMDb movies.csv\")"
    ]
   },
   {
@@ -31,7 +42,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,11 +64,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "im.drop(['budget','usa_gross_income','worlwide_gross_income','metascore'],axis=1,inplace = True)\n",
+    "im.production_company = im.production_company.fillna(\"Other\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "imdb_title_id               0\n",
+       "title                       0\n",
+       "original_title              0\n",
+       "year                        0\n",
+       "date_published              0\n",
+       "genre                       0\n",
+       "duration                    0\n",
+       "country                    64\n",
+       "language                  833\n",
+       "director                   87\n",
+       "writer                   1572\n",
+       "production_company          0\n",
+       "actors                     69\n",
+       "description              2115\n",
+       "avg_vote                    0\n",
+       "votes                       0\n",
+       "reviews_from_users       7597\n",
+       "reviews_from_critics    11797\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "im.isna().sum()"
+   ]
   }
  ],
  "metadata": {
